Fix blending modes missing from G'MIC filters

The layer name parsing must be applied also to excess nodes (and not
only those parsed by the visitor).

BUG: 447293